# workflow-generator

./: .dockerignore  Dockerfile  INSTALL.md  LICENSE  README.md  SKILL.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: mcp-registry.yml  publish.yml  tests.yml
copilot/: index.js  openai_function.json  package.json
docs/: index.html
mcp/: server.py
scripts/: analyze.py
tests/: conftest.py  test_access_log.py  test_capacity.py  test_detectors_core.py  test_detectors_services.py  test_end_to_end.py  test_graph_aggregate.py  test_graph_languages.py  test_hints_prefilter.py
workflow_generator_mcp/: __init__.py  analyze.py  server.py
