[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-generator-mcp"
version = "0.2.1"
description = "Generate a visual system architecture diagram (WORKFLOW.html) with concurrency capacity estimates and bottleneck analysis from any codebase — CLI + MCP server, stdlib-only scanner."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ashutosh Kumar" }]
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "mcp-server", "architecture", "diagram", "concurrency", "bottleneck", "static-analysis", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]

[project.scripts]
workflow-generator-mcp = "workflow_generator_mcp.server:main"
workflow-generator = "workflow_generator_mcp.analyze:main"

[project.urls]
Homepage = "https://github.com/askuma/workflow-generator"
Repository = "https://github.com/askuma/workflow-generator"
"Live Demo" = "https://askuma.github.io/workflow-generator/"

[tool.setuptools]
packages = ["workflow_generator_mcp"]
